Fix css styles for <code>
Stop truncating trailing space in code block

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,7 +306,7 @@ hr {
 
 code {
   color: #555;
-  white-space: nowrap;
+  white-space: pre;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
   border-radius: 3px;
@@ -318,7 +318,7 @@ code {
 
 code.md-code {
   background-color: #f7f7f9;
-  white-space: nowrap;
+  white-space: pre;
   padding: 0;
   display: block;
   margin-bottom: 20px;
